# sonde-regrid

./: .gitignore  CLAUDE.md  cleanup_arrecon.py  download_arrecon.py  download_beach.py  pyproject.toml
doc/: references.bib  regridding.tex
src/: attach_climatology.py  climatology.py  diagnostics.py  drift.py  process.py  readers.py  regrid.py  screen_drift.py
tests/: test_launch_matches_first_obs.py  test_output_structure.py  test_validate_beach.py  test_validate_drift.py  test_validate_joanne.py
